# CUDA-SGEMM

./: CMakeLists.txt  README.md
benchmark/kernel_results/data/: kernel_results.csv
benchmark/kernel_results/plots/: top_kernels.md
scripts/: bootstrap.sh  build.sh  plot_bench.py
src/: kernels.cuh  runner.cu
src/kernels/: 1_naive.cuh  2_global_mem_coalesce.cuh  3_shared_mem_blocking.cuh  4_1D_blocktiling.cuh  5_2D_blocktiling.cuh  6_vectorize.cuh  7_bankconflict_swizzle.cuh
